# colormixer

./: .gitignore  CHANGELOG.MD  NEW_FEATURES.md  README.md  color_utils.py  components.py  config.py  config.yaml  ctrl_caps.ps1  hotkeys.py  inno-colormixer.iss  main.py  pyproject.toml  requirements.txt  state.py  wbuild.sh
components/: __init__.py  display.py  fab.py  history.py  inputs.py  swatches.py  user_palette.py
core/: __init__.py  hotkeys.py  state.py
tests/: test_color_utils.py  test_combination_row_container.py  test_components_swatches.py  test_config.py  test_display.py  test_fab.py  test_history.py  test_hotkeys.py  test_inputs.py  test_main.py  test_main_entry.py  test_project_files.py  test_scripts.py  test_state.py  test_utils.py
utils/: session.py
